# Human-Support-Robot-for-Domestic-Interaction

./: README.md  READ_ME.md
architecture/: CMakeLists.txt  package.xml
architecture/launch/: all.launch  provide_map.launch  search_map.launch  test_launch.launch
architecture/map_tests/: autosavedmap.yaml  my_hw_map.yaml
architecture/src/: Read_Me_py descriptions  move.py  search_map.py  set_goal_v3.py  smach_node_V3.py  smach_node_V3_prev.py
architecture/srv/: set_goal.srv
find_frontier/: CMakeLists.txt  README.md  READ_ME  mapping.py  package.xml
find_frontier/launch/: find_front.launch
find_frontier/rviz/: final.rviz
find_frontier/src/: control.py  control2.py  mapping.py
get_3d_position-master/: CMakeLists.txt  README.md  package.xml
get_3d_position-master/nodes/: get_3d_position.py
go_to_x/: CMakeLists.txt  package.xml
go_to_x/launch/: all.launch  provide_map.launch  search_map.launch  test_launch.launch
go_to_x/map_tests/: goodmap.yaml  hector_first_lab_map.yaml  maptest.pgm  maptest.yaml  my_hw_map_changed.yaml
go_to_x/src/: move.py  search_map.py  set_goal_v3.py  smach_node_V2.py  test_map_exploration.py  test_map_explorationv2.py  test_pub.py
go_to_x/srv/: find_goals.srv
hsr_world/: CMakeLists.txt  package.xml
hsr_world/launch/: hsr_world.launch
hsr_world/worlds/: HW_home_lab_door.world  HW_home_lab_no_door.world  Lab_v4.world  Lab_v5.world  Lab_v6.world  Lab_v7.world  Lab_v8.world
semantic_hsr/: CMakeLists.txt  package.xml
semantic_hsr/data/: room.csv  room_create.py  semantic_map.csv
semantic_hsr/launch/: semantic_hsr.launch
semantic_hsr/src/: csv_writer.py
speech_reco/: CMakeLists.txt  package.xml
speech_reco/src/: stop.py  test.py  thread.py
src/: move.py  search_map.py  set_goal_v3.py  smach_node_V2.py  test_pub.py
src/rubbish/: go.py  move_action.py  set_goal_v2.py  (+1 more)
tmc_darknet_ros/tmc_darknet_ros/: CHANGELOG.rst  CMakeLists.txt  README.rst  package.xml
tmc_darknet_ros/tmc_vision_msgs/: CMakeLists.txt  README.md  mainpage.dox  package.xml
tmc_darknet_ros/tmc_vision_msgs/msg/: Detection.msg  Label.msg
(+5 files in other folders)
